--- a/static/main.css
+++ b/static/main.css
@@ -5,9 +5,45 @@
 }
 
 body {
-    background: #eeeeee;
+    background: rgb(223, 221, 221);
 }
 
-.shadow {
-    box-shadow: 0px 2px 5px 2px darkgrey;
+.navbar {
+    position: fixed;
+    width: 180px;
+    background: rgb(223, 221, 221);
+    height: 100%;
+    margin-bottom: 100px;
+}
+.nav-item {
+    list-style: None;
+    margin: 20px 10px;
+    margin-left: 15px;
+    padding: 15px 20px;
+}
+.nav-link {
+    text-decoration: None;
+    color: rgb(2, 2, 2);
+    font-size: 1.4rem;
+    transition: all 400ms;
+    box-shadow: 0px 2px 5px 2px rgb(160, 158, 158);
+    padding: 15px;
+    width: 75%;
+}
+.nav-link:hover {
+    font-size: 1.6rem;
+}
+h1 {
+    width: 100%;
+    background: rgb(224, 228, 228);
+    color: rgb(14, 13, 13);
+    margin-left: 150px;
+    text-align: center;
+    padding: 15px 20px;
+    box-shadow: 0px 2px 5px 2px rgb(160, 158, 158);
+    width: 75%;
+}
+#content {
+    margin-left: 220px;
+    padding: 30px 20px;
 }
